tried to fix a bug on mobile device regarding the background - do not cover the whole screen

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -30,11 +30,12 @@
 
 
   html {
-     background: url(../img/background.jpg) no-repeat center center fixed;
+     background: url(../img/background_m.jpg) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
+     height: 100%;
   }
 
   body {
